FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Ver.3.3
- FileMaker's checkbox set feature on the post only page.
- File upload component and accept on a server.

Ver.3.2 (2013/3/7)
- Post only page could be made without any programmings!　Refer the "Sample_easyToUnderstand" folder.

Ver.3.1 (2013/2/10)
- Bridge for JavaScript Components is added. So far tinyMCE can be the link node of the page file.
  If you want to use any kind of JS Components, you should make the wrap object as in INTER-Mediator-Parts.js.
  The sample of the page file is in the Sample_webpage folder.
- [BUG FIX] INTERMediator_DBAdapter.db_update had some serious bugs.
- [BUG FIX] All messages weren't localised, ex. button names.
- [BUG FIX] On the Ver.2.6, I've made bugs and some fields didn't work to update. I'm so sorry.

Ver.3 (2012/12/10)=========================================================

[Major differences from Ver.2]
- Validation is supported.
- Definition file keywords checker on debug mode.
- The new-style server-side extension.
- Define the post repeater/enclosure method for each context.
- In a link definition, "$" for replacing and "script" for the type "text/javascript".
- SQLite and PostgreSQL are supported with PDO.
- Accessing media data with authentication is supported.
- Progress indicator is supported.
==========================================================================

Ver.3.0 (2012/12/10)
- Read cache is supported but not well debugged. Moreover don't use cache for updating contexts.
  This feature will complete on the way to Ver.4.0.
- [BUG FIX] Authentication for media didn't work for the 'realm' was specified.
- [BUG FIX] Sample_products/list_detail_FMS.html corrected.
- [BUG FIX] Sample_products/list_detail_MySQL.html corrected.

Ver.2.11 (2012/12/3)